--- a/PlutoWallet/Platforms/Android/AndroidManifest.xml
+++ b/PlutoWallet/Platforms/Android/AndroidManifest.xml
@@ -7,4 +7,10 @@
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="33" />
+
+	<queries>
+	  <intent>
+		<action android:name="android.support.customtabs.action.CustomTabsService" />
+	  </intent>
+	</queries>
 </manifest>
