--- a/PlutoWallet/PlutoWallet.csproj
+++ b/PlutoWallet/PlutoWallet.csproj
@@ -11,6 +11,8 @@
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
 
+		<UsingMauiEssentials>true</UsingMauiEssentials>
+
 		<!-- Display name -->
 		<ApplicationTitle>Pluto wallet</ApplicationTitle>
 
