--- a/PlutoWallet/PlutoWallet.csproj
+++ b/PlutoWallet/PlutoWallet.csproj
@@ -165,6 +165,7 @@
 	  <None Remove="Resources\Images\NetworkIcons\westend.png" />
 	  <None Remove="Resources\Images\NetworkIcons\ajuna.png" />
 	  <None Remove="Resources\Images\NetworkIcons\kusama.png" />
+	  <None Remove="Components\CustomLayouts\" />
 	</ItemGroup>
 	<ItemGroup>
 	  <MauiImage Remove="Resources\Images\dotnet_bot.svg" />
@@ -351,6 +352,7 @@
 	  <Folder Include="Resources\Images\NetworkIcons\" />
 	  <Folder Include="Components\NavigationBar\" />
 	  <Folder Include="Components\Card\" />
+	  <Folder Include="Components\CustomLayouts\" />
 	</ItemGroup>
 	<!--<PropertyGroup>
 		<CodesignEntitlement>Entitlements.plist</CodesignEntitlement>
