--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Substrate.NET.API"]
 	path = Substrate.NET.API
 	url = https://github.com/RostislavLitovkin/Substrate.NET.API
+[submodule "Uniquery.Net"]
+	path = Uniquery.Net
+	url = https://github.com/RostislavLitovkin/Uniquery.Net.git
