--- a/PlutoWallet/PlutoWallet.csproj
+++ b/PlutoWallet/PlutoWallet.csproj
@@ -174,6 +174,8 @@
 	  <None Remove="Resources\Images\PredefinedLayouts\aaabackground.png" />
 	  <None Remove="Components\AwesomeAjunaAvatars\" />
 	  <None Remove="Components\Nft\" />
+	  <None Remove="Resources\Images\plutowalleticon.svg" />
+	  <None Remove="Resources\Images\dusan.jpg" />
 	</ItemGroup>
 	<ItemGroup>
 	  <MauiImage Remove="Resources\Images\dotnet_bot.svg" />
@@ -242,6 +244,8 @@
 	  <BundleResource Include="Resources\Images\NetworkIcons\ajuna.png" />
 	  <BundleResource Include="Resources\Images\NetworkIcons\kusama.png" />
 	  <BundleResource Include="Resources\Images\PredefinedLayouts\aaabackground.png" />
+	  <BundleResource Include="Resources\Images\plutowalleticon.svg" />
+	  <BundleResource Include="Resources\Images\dusan.jpg" />
 	</ItemGroup>
 	<ItemGroup>
 	  <MauiXaml Update="View\MnemonicsPage.xaml">
