--- a/PlutoWallet/PlutoWallet.csproj
+++ b/PlutoWallet/PlutoWallet.csproj
@@ -77,6 +77,7 @@
 	  <PackageReference Include="ZXing.Net.Maui" Version="0.3.0-preview.1" />
 	  <PackageReference Include="Markdig" Version="0.31.0" />
 	  <PackageReference Include="Uniquery" Version="0.1.3" />
+	  <PackageReference Include="Plugin.Fingerprint" Version="3.0.0-beta.1" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -181,6 +182,9 @@
 	  <None Remove="Resources\Images\NetworkIcons\pba.png" />
 	  <None Remove="Components\Contract\" />
 	  <None Remove="Components\Settings\" />
+	  <None Remove="Resources\Images\fingerprintblack.svg" />
+	  <None Remove="Resources\Images\fingerprintwhite.svg" />
+	  <None Remove="Components\ConfirmTransaction\" />
 	</ItemGroup>
 	<ItemGroup>
 	  <MauiImage Remove="Resources\Images\dotnet_bot.svg" />
@@ -253,6 +257,8 @@
 	  <BundleResource Include="Resources\Images\dusan.jpg" />
 	  <BundleResource Include="Resources\Images\NetworkIcons\basilisk.png" />
 	  <BundleResource Include="Resources\Images\NetworkIcons\pba.png" />
+	  <BundleResource Include="Resources\Images\fingerprintblack.svg" />
+	  <BundleResource Include="Resources\Images\fingerprintwhite.svg" />
 	</ItemGroup>
 	<ItemGroup>
 	  <MauiXaml Update="View\MnemonicsPage.xaml">
@@ -379,6 +385,7 @@
 	  <Folder Include="Components\Nft\" />
 	  <Folder Include="Components\Contract\" />
 	  <Folder Include="Components\Settings\" />
+	  <Folder Include="Components\ConfirmTransaction\" />
 	</ItemGroup>
 	<!--<PropertyGroup>
 		<CodesignEntitlement>Entitlements.plist</CodesignEntitlement>
