--- a/PlutoWallet/Platforms/Android/AndroidManifest.xml
+++ b/PlutoWallet/Platforms/Android/AndroidManifest.xml
@@ -5,6 +5,7 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name="android.permission.USE_BIOMETRIC" />
 	<uses-permission android:name="android.permission.USE_FINGERPRINT" />
 	
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="33" />
