--- a/PlutoWallet/PlutoWallet.csproj
+++ b/PlutoWallet/PlutoWallet.csproj
@@ -83,6 +83,8 @@
 	  <PackageReference Include="Markdig" Version="0.31.0" />
 	  <PackageReference Include="Uniquery" Version="0.1.3" />
 	  <PackageReference Include="Plugin.Fingerprint" Version="3.0.0-beta.1" />
+	  <PackageReference Include="DotNetEnv" Version="2.5.0" />
+	  <PackageReference Include="WalletConnect.Web3Wallet" Version="2.1.0" />
 	</ItemGroup>
 
 	<ItemGroup>
