--- a/PlutoWallet/PlutoWallet.csproj
+++ b/PlutoWallet/PlutoWallet.csproj
@@ -206,6 +206,7 @@
 	  <None Remove="Components\HydraDX\" />
 	  <None Remove="Resources\Images\hydradxomnipool.png" />
 	  <None Remove="Model\HydraDX\" />
+	  <None Remove="Resources\Fonts\FontOver.ttf" />
 	</ItemGroup>
 	<ItemGroup>
 	  <MauiImage Remove="Resources\Images\dotnet_bot.svg" />
@@ -288,6 +289,7 @@
 	  <BundleResource Include="Resources\Images\dropdownwhite.svg" />
 	  <BundleResource Include="Resources\Images\dropdownblack.svg" />
 	  <BundleResource Include="Resources\Images\hydradxomnipool.png" />
+	  <BundleResource Include="Resources\Fonts\FontOver.ttf" />
 	</ItemGroup>
 	<ItemGroup>
 	  <MauiXaml Update="View\MnemonicsPage.xaml">
