--- a/PlutoWallet/PlutoWallet.csproj
+++ b/PlutoWallet/PlutoWallet.csproj
@@ -216,6 +216,9 @@
 	  <None Remove="Resources\Images\FatCat\tail2.png" />
 	  <None Remove="Resources\Images\FatCat\tail1.png" />
 	  <None Remove="Resources\Images\azeroidtext.png" />
+	  <None Remove="Resources\Images\whitebackground.png" />
+	  <None Remove="Resources\Images\darkbackground.png" />
+	  <None Remove="Resources\Images\darkbackground2.png" />
 	</ItemGroup>
 	<ItemGroup>
 	  <MauiImage Remove="Resources\Images\dotnet_bot.svg" />
@@ -306,6 +309,9 @@
 	  <BundleResource Include="Resources\Images\FatCat\tail2.png" />
 	  <BundleResource Include="Resources\Images\FatCat\tail1.png" />
 	  <BundleResource Include="Resources\Images\azeroidtext.png" />
+	  <BundleResource Include="Resources\Images\whitebackground.png" />
+	  <BundleResource Include="Resources\Images\darkbackground.png" />
+	  <BundleResource Include="Resources\Images\darkbackground2.png" />
 	</ItemGroup>
 	<ItemGroup>
 	  <MauiXaml Update="View\MnemonicsPage.xaml">
