--- a/PlutoWallet/PlutoWallet.csproj
+++ b/PlutoWallet/PlutoWallet.csproj
@@ -229,6 +229,7 @@
 	  <None Remove="Components\Referenda\" />
 	  <None Remove="Resources\Images\subsquarelogo.svg" />
 	  <None Remove="Resources\Images\NetworkIcons\xcavate.png" />
+	  <None Remove="Resources\Images\PredefinedLayouts\hydradxgods.png" />
 	</ItemGroup>
 	<ItemGroup>
 	  <MauiImage Remove="Resources\Images\dotnet_bot.svg" />
@@ -330,6 +331,7 @@
 	  <BundleResource Include="Resources\Images\greentick.svg" />
 	  <BundleResource Include="Resources\Images\subsquarelogo.svg" />
 	  <BundleResource Include="Resources\Images\NetworkIcons\xcavate.png" />
+	  <BundleResource Include="Resources\Images\PredefinedLayouts\hydradxgods.png" />
 	</ItemGroup>
 	<ItemGroup>
 	  <MauiXaml Update="View\MnemonicsPage.xaml">
