--- a/PlutoWallet/PlutoWallet.csproj
+++ b/PlutoWallet/PlutoWallet.csproj
@@ -84,6 +84,7 @@
 	  <PackageReference Include="Markdig" Version="0.31.0" />
 	  <PackageReference Include="Uniquery" Version="0.1.3" />
 	  <PackageReference Include="Plugin.Fingerprint" Version="3.0.0-beta.1" />
+	  <PackageReference Include="EJL.MauiHybridWebView" Version="1.0.0-preview4" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -232,6 +233,11 @@
 	  <None Remove="Resources\Images\PredefinedLayouts\hydradxgods.png" />
 	  <None Remove="Components\ChangeLayoutRequest\" />
 	  <None Remove="Resources\Images\calamar.png" />
+	  <None Remove="Resources\Raw\TransactionDetailReactView\static\js\main.5db98ac5.js.map" />
+	  <None Remove="Resources\Raw\TransactionDetailReactView\static\js\main.5db98ac5.js.LICENSE.txt" />
+	  <None Remove="Resources\Raw\TransactionDetailReactView\static\js\main.5db98ac5.js" />
+	  <None Remove="Resources\Raw\PolkadotJSApi\" />
+	  <None Remove="Resources\Raw\PolkadotJSApi\index.html" />
 	</ItemGroup>
 	<ItemGroup>
 	  <MauiImage Remove="Resources\Images\dotnet_bot.svg" />
@@ -335,6 +341,10 @@
 	  <BundleResource Include="Resources\Images\NetworkIcons\xcavate.png" />
 	  <BundleResource Include="Resources\Images\PredefinedLayouts\hydradxgods.png" />
 	  <BundleResource Include="Resources\Images\calamar.png" />
+	  <BundleResource Include="Resources\Raw\TransactionDetailReactView\static\js\main.5db98ac5.js.map" />
+	  <BundleResource Include="Resources\Raw\TransactionDetailReactView\static\js\main.5db98ac5.js.LICENSE.txt" />
+	  <BundleResource Include="Resources\Raw\TransactionDetailReactView\static\js\main.5db98ac5.js" />
+	  <BundleResource Include="Resources\Raw\PolkadotJSApi\index.html" />
 	</ItemGroup>
 	<ItemGroup>
 	  <MauiXaml Update="View\MnemonicsPage.xaml">
@@ -467,6 +477,7 @@
 	  <Folder Include="Model\SubSquare\" />
 	  <Folder Include="Components\Referenda\" />
 	  <Folder Include="Components\ChangeLayoutRequest\" />
+	  <Folder Include="Resources\Raw\PolkadotJSApi\" />
 	</ItemGroup>
 
 	<PropertyGroup Condition="$(TargetFramework.Contains('-ios')) and '$(Configuration)' == 'Release'">
@@ -481,5 +492,6 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\Substrate.NET.API\Substrate.NetApi\Substrate.NetApi.csproj" />
 	  <ProjectReference Include="..\Plutonication\Plutonication.csproj" />
+	  <ProjectReference Include="..\..\MauiHybridWebView\HybridWebView\HybridWebView.csproj" />
 	</ItemGroup>
 </Project>
