--- a/PlutoWallet/PlutoWallet.csproj
+++ b/PlutoWallet/PlutoWallet.csproj
@@ -84,6 +84,7 @@
 	  <PackageReference Include="Markdig" Version="0.31.0" />
 	  <PackageReference Include="Uniquery" Version="0.1.3" />
 	  <PackageReference Include="Plugin.Fingerprint" Version="3.0.0-beta.1" />
+	  <PackageReference Include="AzeroIdResolver" Version="1.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
